crates/rstest-bdd-macros/tests/ui/placeholder_missing_param.stderr
error: invalid step function signature: missing step arguments for placeholders: count. help: use `#[given] fn name(...args...)` with supported step arguments/fixtures; remove self.
 --> tests/ui/placeholder_missing_param.rs:4:4
  |
4 | fn step() {}
  |    ^^^^
